package edu.hitsz.EnemyFactory;

import edu.hitsz.aircraft.EnemyAircraft;

public interface EnemyAircraftFactory {
    EnemyAircraft createEnemyAircraft();
}
